<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:src="@drawable/callacab"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:paddingLeft="24px"
            android:paddingRight="24px"
            android:background="@color/dialog_hit_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_for_pass_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_30"
                    android:text="@string/forgot_password_logo"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_user_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/email_icon"
                        android:layout_centerVertical="true"/>

                    <EditText
                        android:id="@+id/edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:hint="@string/email"
                        android:textSize="@dimen/font_16"
                        android:layout_toRightOf="@+id/img_user_icon"
                        android:layout_marginLeft="@dimen/margin_15"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/white"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"/>

                </RelativeLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/textbox_bottom_line"
                    android:layout_marginTop="@dimen/margin_10"
                    android:scaleType="fitXY"/>


                <RelativeLayout
                    android:id="@+id/layout_retrive_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blank_btn"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/txt_retrive_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_15"
                        android:text="@string/retrive_password"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"/>

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>


</LinearLayout>






</RelativeLayout>



